web/projectlinusnashville/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: projectlinusnashville
  namespace: web
  labels:
    app: projectlinusnashville
spec:
  ports:
    - name: server
      port: 80
      targetPort: 2368
  selector:
    app: projectlinusnashville
